clusters/home/heimdall/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: heimdall
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  namespace: heimdall
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      containers:
      - name: heimdall
        image: lscr.io/linuxserver/heimdall:2.4.12
        ports:
          - containerPort: 80
        volumeMounts:
          - name: heimdall-config-vol
            mountPath: /config
      volumes:
      - name: heimdall-config-vol
        persistentVolumeClaim:
          claimName: heimdall-config-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: heimdall
spec:
  selector:
    app: heimdall
  type: ClusterIP
  ports:
  - name: http
    port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: heimdall
spec:
  rules:
    - host: "portal.conheart.com"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: heimdall
              port:
                number: 80
